Fix number not showing well when donations are low

--- a/css/incentives-only.css
+++ b/css/incentives-only.css
@@ -62,6 +62,15 @@ body {
 .bro-remainder {
   background: #5A5A5A;
   flex-grow: 1;
+
+  /* labels */
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  color: hsl(var(--offwhite));
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .bro-left {
